5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1815_2567.log
== TEST (2019-06-10 14:41:42) 
-- CODE:
from numoy import*
entrada=array(input(""))
print(entrada)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numoy import*
ModuleNotFoundError: No module named 'numoy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:41:53) 
-- CODE:
from numpy import*
entrada=array(input(""))
print(entrada)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:41:59) 
-- CODE:
from numpy import*
entrada=array(input(""))
print(entrada)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:42:13) 
-- CODE:
from numpy import*
entrada=array(input(""))
print(entrada)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:49:13) 
-- CODE:
from numpy import*
entrada=array(input(""))
print(entrada*5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:49:52) 
-- CODE:
from numpy import*
entradainput("")
print(entrada*5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:49:56) 
-- CODE:
from numpy import*
entradainput("")
print(entrada*5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:50:07) 
-- CODE:
from numpy import*
entrada=input("")
print(entrada*5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:50:26) 
-- CODE:

entrada=input("")
print(entrada*5)
-- OUTPUT:
88888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:51:49) 
-- CODE:

entrada=int(input(""))
print(entrada*!)
-- ERROR:
File "XXXX", line 3
    print(entrada*!)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:52:42) 
-- CODE:

entrada=int(input(""))
string="*"
print(entrada*string)
-- OUTPUT:
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:57:01) 
-- CODE:

entrada=int(input(""))
string="*"
quantidade=entrada*string
for i in quantidade:
	print(i)
-- OUTPUT:
*
*
*
*
*
*
*
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:02:45) 
-- CODE:

entrada=int(input(""))
string="*"
quantidade=entrada*string
for i in quantidade:
	print(size(quantidade))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(size(quantidade))
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:06:40) 
-- CODE:

entrada=int(input(""))
string="*"
quantidade=entrada*string
for i in quantidade:
	print(quantidade)
-- OUTPUT:
********
********
********
********
********
********
********
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:07:21) 
-- CODE:

entrada=int(input(""))
string="*"
quantidade=entrada*string
for i in quantidade:
	print(quantidade)
-- OUTPUT:
********
********
********
********
********
********
********
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:09:00) 
-- CODE:

entrada=int(input(""))
string="*"
quantidade=entrada*string
for i in quantidade:
	print(quantidade)
	quantidade=quantidade-1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    quantidade=quantidade-1
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:10:45) 
-- CODE:

entrada=int(input(""))
string="*"
quantidade=entrada*string
for i in quantidade:
	print(quantidade)
	quantidade=quantidade-1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    quantidade=quantidade-1
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:42:56) 
-- CODE:
entrada=int(input(""))
string="*"
quantidade=entradastring
for i in range(1,5):
	print(i*string)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quantidade=entradastring
NameError: name 'entradastring' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:43:11) 
-- CODE:
entrada=int(input(""))
string="*"

for i in range(1,5):
	print(i*string)
	
-- OUTPUT:
*
**
***
****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:44:32) 
-- CODE:
entrada=int(input(""))
string="*"
for i in 

for i in range(1,entrada):
	print(i*string)
	
-- ERROR:
File "XXXX", line 3
    for i in 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:44:39) 
-- CODE:
entrada=int(input(""))
string="*"


for i in range(1,entrada):
	print(i*string)
	
-- OUTPUT:
*
**
***
****
*****
******
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:45:22) 
-- CODE:
entrada=int(input(""))
string="*"


for i in range(1,entrada+1):
	print(i*string)
	
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:50:29) 
-- CODE:
entrada=int(input(""))
string="*"
for i range(1,entrada+1,-1)
	print(i*string)

for i in range(1,entrada+1):
	print(i*string)
	
-- ERROR:
File "XXXX", line 3
    for i range(1,entrada+1,-1)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:50:40) 
-- CODE:
entrada=int(input(""))
string="*"
for i in range(1,entrada+1,-1)
	print(i*string)

for i in range(1,entrada+1):
	print(i*string)
	
-- ERROR:
File "XXXX", line 3
    for i in range(1,entrada+1,-1)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:50:46) 
-- CODE:
entrada=int(input(""))
string="*"
for i in range(1,entrada+1,-1):
	print(i*string)

for i in range(1,entrada+1):
	print(i*string)
	
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:51:25) 
-- CODE:
entrada=int(input(""))
string="*"
for i in range(1,entrada+1,-1):
	print(i*string)


	
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:51:54) 
-- CODE:
entrada=int(input(""))
string="*"

for i in range(1,entrada+1,-1):
	print(i*string)


	
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:52:33) 
-- CODE:
entrada=int(input(""))
string="*"

for i in range(-1,entrada+1,-1):
	print(i*string)


	
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:52:52) 
-- CODE:
entrada=int(input(""))
string="*"

for i in range(-1,entrada-1,-1):
	print(i*string)


	
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:59:42) 
-- CODE:
entrada=int(input(""))
string="*"
for i in range(entrada+1,-1)
	print(i*string)

for i in range(1,entrada+1):
	print(i*string)
	
-- ERROR:
File "XXXX", line 3
    for i in range(entrada+1,-1)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:59:53) 
-- CODE:
entrada=int(input(""))
string="*"
for i in range(entrada+1,-1):
	print(i*string)

for i in range(1,entrada+1):
	print(i*string)
	
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:00:35) 
-- CODE:
entrada=int(input(""))
string="*"

for i in range(entrada+1,9):
	print(i*string)

for i in range(1,entrada+1):
	print(i*string)
	
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:01:50) 
-- CODE:
entrada=int(input(""))
string="*"

for i in range(entrada+1,1,-1):
	print(i*string)

for i in range(1,entrada+1):
	print(i*string)
	
-- OUTPUT:
*********
********
*******
******
*****
****
***
**
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:02:11) 
-- CODE:
entrada=int(input(""))
string="*"

for i in range(entrada+1,1,-1):
	print(i*string)

for i in range(1,entrada+1):
	print(i*string)
	
-- OUTPUT:
*********
********
*******
******
*****
****
***
**
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:02:27) 
-- CODE:
entrada=int(input(""))
string="*"

for i in range(entrada+1,1,-1):
	print(i*string)

for i in range(1,entrada+1):
	print(i*string)
	
-- OUTPUT:
*********
********
*******
******
*****
****
***
**
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:03:40) 
-- CODE:
entrada=int(input(""))
string="*"

for i in range(entrada+1,1,-1):
	print(i*string)

for i in range(1,entrada+1):
	print(i*string)
	
-- OUTPUT:
*********
********
*******
******
*****
****
***
**
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:04:09) 
-- CODE:
entrada=int(input(""))
string="*"

for i in range(entrada,1,-1):
	print(i*string)

for i in range(1,entrada+1):
	print(i*string)
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 22:04:32) 
-- CODE:
entrada=int(input(""))
string="*"

for i in range(entrada,1,-1):
	print(i*string)

for i in range(1,entrada+1):
	print(i*string)
	
-- EXECUTION TIME:
0.854715
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:04:41) 
-- CODE:
entrada=int(input(""))
string="*"

for i in range(entrada,1,-1):
	print(i*string)


	
-- OUTPUT:
********
*******
******
*****
****
***
**
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:05:00) 
-- CODE:
entrada=int(input(""))
string="*"

for i in range(entrada,0,-1):
	print(i*string)


	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:05:18) 
-- CODE:
entrada=int(input(""))
string="*"

for i in range(entrada,0,-1):
	print(i*string)
for i in range(1,entrada+1):
	print(i*string)

	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 22:05:29) 
-- CODE:
entrada=int(input(""))
string="*"

for i in range(entrada,0,-1):
	print(i*string)
for i in range(1,entrada+1):
	print(i*string)

	
-- EXECUTION TIME:
0.820596
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
